--- a/pom.xml
+++ b/pom.xml
@@ -33,6 +33,7 @@
       <maven.compiler.target>11</maven.compiler.target>
       <openLineageVersion>1.7.0</openLineageVersion>
       <spotless.version>2.41.1</spotless.version>
+      <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
       <sparkVersion>3.5.0</sparkVersion>
    </properties>
    <dependencies>
@@ -184,32 +185,43 @@
          </plugin>
       </plugins>
    </build>
-   <distributionManagement>
-      <snapshotRepository>
-         <id>ossrh</id>
-         <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-      </snapshotRepository>
-      <repository>
-         <id>ossrh</id>
-         <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-      </repository>
-   </distributionManagement>
+   <repositories>
+    <repository>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>false</enabled>
+      </snapshots>
+      <id>central</id>
+      <url>https://repo1.maven.org/maven2/</url>
+    </repository>
+    <repository>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <id>clojars</id>
+      <url>https://repository.apache.org/content/repositories/snapshots/</url>
+    </repository>
+    <repository>
+      <releases>
+        <enabled>true</enabled>
+      </releases>
+      <snapshots>
+        <enabled>true</enabled>
+      </snapshots>
+      <id>aws-redshift</id>
+      <url>https://s3.amazonaws.com/redshift-maven-repository/release</url>
+    </repository>
+  </repositories>
    <profiles>
       <profile>
          <id>ci-cd</id>
          <build>
             <plugins>
-                <plugin>
-                    <groupId>org.sonatype.plugins</groupId>
-                    <artifactId>nexus-staging-maven-plugin</artifactId>
-                    <version>1.6.13</version>
-                    <extensions>true</extensions>
-                    <configuration>
-                    <serverId>ossrh</serverId>
-                    <nexusUrl>https://s01.oss.sonatype.org</nexusUrl>
-                    <autoReleaseAfterClose>${env.AUTO_RELEASE_AFTER_CLOSE}</autoReleaseAfterClose>
-                    </configuration>
-                </plugin>
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-release-plugin</artifactId>
