--- a/pom.xml
+++ b/pom.xml
@@ -217,6 +217,16 @@
       <url>https://s3.amazonaws.com/redshift-maven-repository/release</url>
     </repository>
   </repositories>
+  <distributionManagement>
+    <snapshotRepository>
+      <id>ossrh</id>
+      <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+    </snapshotRepository>
+    <repository>
+      <id>ossrh</id>
+      <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+    </repository>
+  </distributionManagement>
    <profiles>
       <profile>
          <id>ci-cd</id>
