--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
    <groupId>org.open-metadata</groupId>
    <artifactId>openmetadata-spark-agent</artifactId>
    <packaging>jar</packaging>
-   <version>1.0-SNAPSHOT</version>
+   <version>1.0-beta</version>
    <name>${project.groupId}:${project.artifactId}</name>
    <url>https://github.com/open-metadata/OpenMetadata</url>
    <licenses>
