--- a/pom.xml
+++ b/pom.xml
@@ -6,16 +6,23 @@
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.open-metadata</groupId>
    <artifactId>openmetadata-spark-agent</artifactId>
-   <packaging>jar</packaging>
    <version>1.0-beta</version>
    <name>${project.groupId}:${project.artifactId}</name>
    <url>https://github.com/open-metadata/OpenMetadata</url>
+   
    <licenses>
       <license>
          <name>The Apache License, Version 2.0</name>
          <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
       </license>
    </licenses>
+
+   <scm>
+      <connection>scm:git:git@github.com:Open-Metadata/OpenMetadata</connection>
+      <developerConnection>scm:git:git@github.com:Open-Metadata/OpenMetadata</developerConnection>
+      <url>scm:git:git@github.com:Open-Metadata/OpenMetadata</url>
+   </scm>
+
    <developers>
       <developer>
          <name>OpenMetadata</name>
@@ -24,18 +31,23 @@
          <organizationUrl>https://getcollate.io/</organizationUrl>
       </developer>
    </developers>
-   <scm>
-      <connection>scm:git:git@github.com:Open-Metadata/OpenMetadata</connection>
-      <developerConnection>scm:git:git@github.com:Open-Metadata/OpenMetadata</developerConnection>
-      <url>scm:git:git@github.com:Open-Metadata/OpenMetadata</url>
-   </scm>
+
+   <distributionManagement>
+      <snapshotRepository>
+         <id>ossrh</id>
+         <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
+      </snapshotRepository>
+      <repository>
+         <id>ossrh</id>
+         <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+      </repository>
+   </distributionManagement>
    <properties>
       <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
       <maven.compiler.source>11</maven.compiler.source>
       <maven.compiler.target>11</maven.compiler.target>
       <openLineageVersion>1.7.0</openLineageVersion>
       <spotless.version>2.41.1</spotless.version>
-      <maven-release-plugin.version>3.0.1</maven-release-plugin.version>
       <maven-javadoc-plugin.version>3.6.0</maven-javadoc-plugin.version>
       <maven-source-plugin.version>3.3.0</maven-source-plugin.version>
       <sparkVersion>3.5.0</sparkVersion>
@@ -189,48 +201,6 @@
          </plugin>
       </plugins>
    </build>
-   <repositories>
-      <repository>
-         <releases>
-            <enabled>true</enabled>
-         </releases>
-         <snapshots>
-            <enabled>false</enabled>
-         </snapshots>
-         <id>central</id>
-         <url>https://repo1.maven.org/maven2/</url>
-      </repository>
-      <repository>
-         <releases>
-            <enabled>true</enabled>
-         </releases>
-         <snapshots>
-            <enabled>true</enabled>
-         </snapshots>
-         <id>clojars</id>
-         <url>https://repository.apache.org/content/repositories/snapshots/</url>
-      </repository>
-      <repository>
-         <releases>
-            <enabled>true</enabled>
-         </releases>
-         <snapshots>
-            <enabled>true</enabled>
-         </snapshots>
-         <id>aws-redshift</id>
-         <url>https://s3.amazonaws.com/redshift-maven-repository/release</url>
-      </repository>
-   </repositories>
-   <distributionManagement>
-      <snapshotRepository>
-         <id>ossrh</id>
-         <url>https://s01.oss.sonatype.org/content/repositories/snapshots</url>
-      </snapshotRepository>
-      <repository>
-         <id>ossrh</id>
-         <url>https://s01.oss.sonatype.org/service/local/staging/deploy/maven2/</url>
-      </repository>
-   </distributionManagement>
    <profiles>
       <profile>
          <id>release</id>
@@ -238,28 +208,29 @@
             <plugins>
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
-                  <artifactId>maven-release-plugin</artifactId>
-                  <version>2.5.3</version>
-                  <dependencies>
-                     <dependency>
-                        <groupId>org.apache.maven.scm</groupId>
-                        <artifactId>maven-scm-provider-gitexe</artifactId>
-                        <version>1.8.1</version>
-                     </dependency>
-                     <dependency>
-                        <groupId>org.sonatype.plexus</groupId>
-                        <artifactId>plexus-sec-dispatcher</artifactId>
-                        <version>1.4</version>
-                     </dependency>
-                  </dependencies>
+                  <artifactId>maven-source-plugin</artifactId>
+                  <version>${maven-source-plugin.version}</version>
+                  <executions>
+                     <execution>
+                        <id>attach-sources</id>
+                        <goals>
+                           <goal>jar-no-fork</goal>
+                        </goals>
+                     </execution>
+                  </executions>
+               </plugin>
+               <plugin>
+                  <groupId>org.apache.maven.plugins</groupId>
+                  <artifactId>maven-javadoc-plugin</artifactId>
+                  <version>${maven-javadoc-plugin.version}</version>
                   <configuration>
-                     <tagNameFormat>@{project.version}</tagNameFormat>
+                     <doclint>none</doclint>
                   </configuration>
                   <executions>
                      <execution>
-                        <id>default</id>
+                        <id>attach-javadocs</id>
                         <goals>
-                           <goal>perform</goal>
+                           <goal>jar</goal>
                         </goals>
                      </execution>
                   </executions>
@@ -267,6 +238,7 @@
                <plugin>
                   <groupId>org.apache.maven.plugins</groupId>
                   <artifactId>maven-gpg-plugin</artifactId>
+                  <version>3.0.1</version>
                   <executions>
                      <execution>
                         <id>sign-artifacts</id>
