--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+   xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+   xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <description>OpenMetadata Spark Agent</description>
    <modelVersion>4.0.0</modelVersion>
    <groupId>org.open-metadata</groupId>
@@ -130,7 +132,7 @@
                         <formatJavadoc>false</formatJavadoc>
                         <groupArtifact>com.google.googlejavaformat:google-java-format</groupArtifact>
                      </googleJavaFormat>
-                     <removeUnusedImports/>
+                     <removeUnusedImports />
                   </java>
                </configuration>
                <executions>
@@ -175,7 +177,7 @@
    </build>
    <profiles>
       <profile>
-         <id>ci-cd</id>
+         <id>release</id>
          <build>
             <plugins>
                <plugin>
